Version 2.1.128
    The first rank of Iron Arm for Unarmed now only gives 1.5 bonus damage instead of 4 (other ranks are the same as before)
    Blast Mining nerf reverted
    Fixed a few locale errors with commands
    (API) Added ExperienceAPI::addCombatXP for adding combat XP to players, signature may change so its deprecated for now
    mcMMO now logs whether or not its using FlatFile or SQL database on load

    NOTES: A more thorough look at Unarmed balance will happen in the future, the intention of this nerf is to make Unarmed less rewarding until it is leveled quite a bit.

Version 2.1.127
    Child Skills now have XP bars, they are hidden by default
    Updated hu_HU locale (thanks andris155)
    Updated korean locale (thanks GownHeeJun)
    Fixed a potential resource leak (thanks f1xme)
    Fixed some potential chunk bugs (thanks f1xme)


    NOTES:
    You can enable the child skill bars with the command /mmoxpbar <skill> show

Version 2.1.126
    mcMMO now relies on NMS for some of its features, if NMS cannot properly be wired up when initializing mcMMO behaviours relying on NMS will either be partially supported or disabled
    mcMMO now has a compatibility mode, any features that require specific versions of Minecraft for full functionality will be disabled if your server is not running a compatible version, mcMMO will still function in compatibility mode, but either the feature will be modified or disabled depending on the version of the server software
    New command /mmocompat - Shows information about whether or not mcMMO is fully functional or if some features are disabled due to the server software not being fully supported. Can be used by players or console.
    New command /mmoxpbar (alias /xpbarsettings) - Players can choose to always show XP bars or to never show XP bars on a per skill basis
    XPBars now last for 3 seconds before hiding instead of 2 seconds
    Fixed an exploit involving fishing rods