@@ -1,6 +1,7 @@
 Version 2.1.128
     The first rank of Iron Arm for Unarmed now only gives 1.5 bonus damage instead of 4 (other ranks are the same as before)
     Blast Mining nerf reverted
+    Fixed a bug where debris were not reduced from Blast Mining skills
     Fixed a few locale errors with commands
     (API) Added ExperienceAPI::addCombatXP for adding combat XP to players, signature may change so its deprecated for now
     mcMMO now logs whether or not its using FlatFile or SQL database on load
